--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@slavkojos/keep-a-changelog",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "[Keep a Changelog](https://github.com/oscarotero/keep-a-changelog) library for\r Node & Deno",
   "main": "dist/index.js",
   "directories": {
@@ -24,6 +24,7 @@
     "semver": "^7.3.8"
   },
   "devDependencies": {
+    "@types/semver": "^7.3.13",
     "tsup": "^6.7.0",
     "typescript": "^5.0.2"
   }
